2004-10-10  Jim Blandy  <jimb@redhat.com>

	* MAINTAINERS (generic symtabs, dwarf readers, elf reader, stabs
	reader, tracing bytecode stuff): Remove self.

2004-10-10  Mark Kettenis  <kettenis@gnu.org>

	* sparc64-linux-tdep.c: Update copyright year.  Don't include
	"solib-svr4.h".
	(sparc64_linux_svr4_fetch_link_map_offsets): Remove function.
	(sparc64_linux_init_abi): Don't set solib_svr4_link_map_offsets.
	* Makefile.in (sparc64-linux-tdep.o): Update dependencies.

	* sparc-linux-tdep.c: Update copyright year.
	(sparc_linux_sigtramp_start): Change first argument from CORE_ADDR
	to struct frame_info *.  Use safe_frame_unwind_memory instead of
	deprecated_read_memory_nobpt.
	(sparc32_linux_sigtramp_start, sparc32_linux_rt_sigtramp_start):
	Change argumen from CORE_ADDR to struct frame_info *.  Adjust for
	changed signature of sparc_linux_sigtramp_start.
	(sparc32_linux_pc_in_sigtramp): Remove function.
	(sparc32_linux_sigtramp_p): New function.
	(sparc32_linux_sigtramp_frame_sniffer): Use
	sparc32_linux_sigtramp_p instead of sparc32_linux_pc_in_sigtramp.

	* sparc-linux-tdep.c (sparc32_linux_svr4_fetch_link_map_offsets):
	Remove function.
	(sparc32_linux_init_abi): Don't set solib_svr4_link_map_offsets.

	* ada-lang.c (lim_warning): Re-implement as a varargs function.
	(decode_packed_array_type, value_subscript_packed)
	(ada_evaluate_subexp, to_fixed_range_type): Remove redundant
	argument in call to lim_warning.

	* configure.in: Really disable the TUI if an enhanced curses
	library isn't found.
	* configure: Regenerate.

2004-10-09  Mark Kettenis  <kettenis@gnu.org>

	* config/i386/nbsdaout.mh (NAT_FILE): Set to solib.h.
	* config/i386/nbsdelf.mh (NAT_FILE): Set to solib.h.
	* config/i386/nm-nbsdaout.h: Remove file.
	* config/i386/nm-fbsd.h (link_object, lo_name, lo_library)
	(lo_unused, lo_major, lo_minor, lo_next, link_map, lm_addr)
	(lm_name, lm_next, lm_lop, lm_lob, lm_rwt, lm_ld, lm_lpd)
	(link_dynamic_2, ld_loaded, ld_need, ld_rules, ld_got, ld_plt)